--- a/layouts/partials/fuse-search/footer.html
+++ b/layouts/partials/fuse-search/footer.html
@@ -3,9 +3,9 @@
 
 
 <!-- Hugo fuse-search floating search element -->
-<div id="fastSearch">
-  <input id="searchInput" tabindex="0" placeholder="search">
-  <ul id="searchResults"></ul>
+<div id="fuse-search-top-searchbar">
+  <input id="fuse-search-input" tabindex="0" placeholder="search">
+  <ul id="fuse-search-results"></ul>
 </div>
 
 <!-- Hugo fuse-search libraries -->
