--- a/layouts/partials/fuse-search/head.html
+++ b/layouts/partials/fuse-search/head.html
@@ -1,5 +1,6 @@
-{{ with $.Site.Params.search -}}
-{{ if eq .enabled true -}}
+{{ if eq (.Param "search.enabled") true }}
+
 {{ $style := resources.Get "css/fuse-search.css" | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous" type="text/css">
-{{- end }}{{- end }}
+
+{{- end }}
