Refactored fuse-search.js The complete code has been restructed into classes The search engine, which is essentially a wrapper for Fuse.io, has its own class, while the topSearchbar (the only current search component) has another. The classes are loosely coupled in that the topSearchbar requires the search engine as input. Improvements can probably be made in fault tolerance.

--- a/layouts/partials/fuse-search/footer.html
+++ b/layouts/partials/fuse-search/footer.html
@@ -7,6 +7,7 @@
 {{ $js := resources.Get "js/fuse-search.js" }}
 {{- $secureJS := $js |  resources.Minify | resources.Fingerprint -}}
 <script type="text/javascript" src="{{ $secureJS.RelPermalink }}" integrity="{{ $secureJS.Data.Integrity }}" crossorigin="anonymous"></script>
+<script>setupSearch();</script>
 
 <!-- Hugo fuse-search topSearchbar -->
 {{- if eq (.Param "search.topSearchbar.enabled") true -}}
