Created seperate keyboard handler

--- a/layouts/partials/fuse-search/footer.html
+++ b/layouts/partials/fuse-search/footer.html
@@ -15,7 +15,7 @@
   <input id="fuse-search-input" tabindex="0" placeholder="search">
   <ul id="fuse-search-results"></ul>
 </div>
-<script>setupTopSearchbar();</script>
+<script>setupKeyboardHandler(setupTopSearchbar());</script>
 {{- end -}}
 
 {{- end -}}
