--- a/layouts/partials/fuse-search/footer.html
+++ b/layouts/partials/fuse-search/footer.html
@@ -21,7 +21,7 @@
 {{- end -}}
 {{- end -}}
 
-<!-- Hugo fuse-search topSearchbar -->
+<!-- Hugo fuse-search fullscreenSearchbar -->
 {{- if eq (.Param "search.fullscreenSearchbar.enabled") true -}}
 <div id="fuse-search-fullscreen-searchbar" class="fuse-search-top-searchbar-{{ .Param "search.fullscreenSearchbar.color" }}">
   <a id="fuse-search-fullscreen-searchbar-close">×</a>
