--- a/assets/css/fuse-search.css
+++ b/assets/css/fuse-search.css
@@ -1,12 +1,11 @@
 /*
-Copyright 2020 Craig Mod
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
-IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ * Part of the hugo-fuse-search project
+ * https://github.com/theys96/hugo-fuse-search/
+ * License: https://github.com/Theys96/hugo-fuse-search/blob/master/LICENSE
+ * 
+ * Note: contains parts of code still remaining from the original code this
+ * program is based on. Author: Craig Mod.
+ * https://gist.github.com/cmod/5410eae147e4318164258742dd053993
 */
 
 
